# media-pilot

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  brand.example.md  pyproject.toml
.claude-plugin/: plugin.json
deepagent/: __init__.py  __main__.py  brand.py  cli.py  config.py
deepagent/_scripts/: __init__.py  run_tts.py  wechat_render.py
deepagent/agent/: __init__.py  backends.py  model.py  orchestrator.py  runner.py  subagents.py
deepagent/motion_graphics/: __init__.py  icons.py  template.py
deepagent/prompts/: __init__.py  brand_preamble.py  discovery.py  orchestrator.py  strategy.py  video.py  writing.py
deepagent/prompts/platform_dna/: __init__.py  bilibili.py  douyin.py  wechat.py  xiaohongshu.py
deepagent/scheduler/: __init__.py  guardrails.py  notify.py  topic_selector.py
deepagent/tools/: __init__.py  agnes_video.py  brand_check.py  content_io.py  image_verify.py  images.py  tts.py  video.py  web.py  wechat_render.py
hooks/: hooks.json  session-start
skills/content-discovery/: SKILL.md
skills/content-discovery/references/: cn-sources.md  intl-sources.md
skills/content-strategy/: SKILL.md
skills/image-gen/: README.md  SKILL.md
skills/image-gen/scripts/: generate_image.py  generate_image.sh
skills/platform-writing/: SKILL.md
skills/platform-writing/references/: bilibili.md  douyin.md  wechat.md  xiaohongshu.md
skills/platform-writing/scripts/: wechat_render.py
skills/using-media-pilot/: SKILL.md
skills/video-production/: SKILL.md
skills/video-production/scripts/: minimax_tts.sh
tests/: test_smoke.py
