[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-pilot"
version = "0.2.0"
description = "Autonomous self-media content engine — Claude Code plugin + standalone deepagents agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "cong", email = "cong@example.com"}]
keywords = ["self-media", "content-creation", "agent", "deepagents", "langchain", "automation"]
dependencies = [
    "deepagents>=0.1",
    "langchain-openai>=0.3",
    "langchain-community>=0.3",
    "tavily-python>=0.5",
    "click>=8.1",
    "httpx>=0.27",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
cos = ["cos-python-sdk-v5>=1.9"]

[tool.setuptools.packages.find]
where = ["."]
include = ["deepagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
